--- a/site/public/index.html
+++ b/site/public/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UT1_01 Aimar Sanchez</title>
+    <link rel="stylesheet" href="../styles/card.css">
 </head>
 <body>
-    <h1>Hello word!</h1>
+    <div class="card-container">
+        <div class="card">
+            <p>Img 1</p>
+            <img src="../img/img1.png" alt="img1">
+        </div>
+        <div class="card">
+            <p>Img 2</p>
+            <img src="../img/img2.png" alt="img2">
+        </div>
+        <div class="card">
+            <p>Img 3</p>
+            <img src="../img/img3.png" alt="img3">
+        </div>
+    </div>
 </body>
 </html>
