--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UT1_01 Aimar Sanchez</title>
-    <link rel="stylesheet" href="../styles/card.css">
+    <link rel="stylesheet" href="./styles/card.css">
 </head>
 <body>
     <div class="card-container">
         <div class="card">
             <p>Img 1</p>
-            <img src="../img/img1.png" alt="img1">
+            <img src="./img/img1.png" alt="img1">
         </div>
         <div class="card">
             <p>Img 2</p>
-            <img src="../img/img2.png" alt="img2">
+            <img src="./img/img2.png" alt="img2">
         </div>
         <div class="card">
             <p>Img 3</p>
-            <img src="../img/img3.png" alt="img3">
+            <img src="./img/img3.png" alt="img3">
         </div>
     </div>
 </body>
