--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="card-container">
         <div class="card">
+             <p>Hola MUNDO</p>
             <p>Img 1</p>
             <img src="./img/img1.png" alt="img1">
         </div>
